# ada_bd

./: dbt_project.yml  pyproject.toml
models/new_tables/: components.sql  error.sql  error_machine.sql  model.sql  schema.yml
models/staging/: base_raw_errors.sql  base_raw_failures.sql  base_raw_machines.sql  base_raw_maint.sql  base_raw_telemetry.sql  schema.yml
tests/: assert_datetime_is_greater_than_2000.sql
